src/objects/Outbound_Call_Batch_Setting__c.object
<CustomObject>
    <description>Configuration object for batch jobs generating Cases for Outbound Calling</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active setting</description>
        <inlineHelpText>Define whether Batch Setting is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Class_Name__c</fullName>
        <description>Batch Class Name</description>
        <inlineHelpText>Define the name of the batch class that generates the Cases</inlineHelpText>
        <label>Batch Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Job_Notifications__c</fullName>
        <description>Batch job errors and notifications</description>
        <inlineHelpText>Stores batch job errors and notifications from last 2 executions</inlineHelpText>
        <label>Batch Job Notifications</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Batch_Status__c</fullName>
        <description>Batch status</description>
        <formula>IMAGE(
     IF(
        ISBLANK(Job_Id__c),
        &quot;/img/samples/light_red.gif&quot;,
        IF(
           Last_Execution_Error__c,
           &quot;/img/samples/light_yellow.gif&quot;,
           &quot;/img/samples/light_green.gif&quot;
        )
     ), 
     &quot;status color&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display the status of related scheduled job</inlineHelpText>
        <label>Batch Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cron_String__c</fullName>
        <description>Cron String</description>
        <inlineHelpText>Cron string to be used by the scheduler. Cron string definition: Seconds Minutes Hours Day_of_month Month Day_of_week optional_year</inlineHelpText>
        <label>Cron String</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executions__c</fullName>
        <description>Number of executions</description>
        <inlineHelpText>Stores the number of executions</inlineHelpText>
        <label>Executions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <description>Scheduled job Id</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is populated with the job Id after Schedule Job button is clicked</inlineHelpText>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Execution_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Last Execution Error</description>
        <inlineHelpText>Stores information whether last execution had an error</inlineHelpText>
        <label>Last Execution Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outbound_Call_Setting__c</fullName>
        <description>Related Outbound Call Setting</description>
        <inlineHelpText>Define Outbound Call Setting Master</inlineHelpText>
        <label>Outbound Call Setting</label>
        <referenceTo>Outbound_Call_Setting__c</referenceTo>
        <relationshipLabel>Outbound Call Batch Settings</relationshipLabel>
        <relationshipName>Outbound_Call_Batch_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <description>Setting parameters in json format</description>
        <inlineHelpText>Define Setting parameters in json format</inlineHelpText>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Scope of records</description>
        <inlineHelpText>Define the scope of records to be picked up</inlineHelpText>
        <label>Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Outbound Call Batch Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Outbound_Call_Setting__c</columns>
        <columns>Batch_Class_Name__c</columns>
        <columns>Active__c</columns>
        <columns>Batch_Status__c</columns>
        <columns>Executions__c</columns>
        <columns>Job_Id__c</columns>
        <columns>Cron_String__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Outbound Call Batch Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Call Batch Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>